[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/circle object.tres.gd" type="Script" id=1]

[node name="circle object" type="Line2D"]
width = 3.0
default_color = Color( 1, 0.4, 0.52549, 1 )
script = ExtResource( 1 )

[node name="linesHolder" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="cut shot" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="line2D" type="Line2D" parent="cut shot"]
points = PoolVector2Array( 0, 0, 0, 0, 0, 0 )
width = 3.0
default_color = Color( 0.823529, 0.215686, 0.843137, 1 )

[node name="line choose mark" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
width = 7.0
default_color = Color( 1, 0, 0, 1 )

[node name="cut marker" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 5.0
default_color = Color( 0.105882, 0.921569, 1, 0.85098 )

[node name="selectLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
width = 4.0
default_color = Color( 0.392157, 0.870588, 0.258824, 1 )
